; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns-host/extr_ldns-host.c_ldns_rr_soa_get_serial.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns-host/extr_ldns-host.c_ldns_rr_soa_get_serial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LDNS_RR_TYPE_SOA = common dso_local global i64 0, align 8
@LDNS_RDF_TYPE_INT32 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ldns_rr_soa_get_serial to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldns_rr_soa_get_serial(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @ldns_rr_get_type(i32* %5)
  %7 = load i64, i64* @LDNS_RR_TYPE_SOA, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %31

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @ldns_rr_rd_count(i32* %11)
  %13 = icmp ne i32 %12, 7
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %31

15:                                               ; preds = %10
  %16 = load i32*, i32** %3, align 8
  %17 = call i32* @ldns_rr_rdf(i32* %16, i32 2)
  store i32* %17, i32** %4, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @ldns_rdf_get_type(i32* %18)
  %20 = load i64, i64* @LDNS_RDF_TYPE_INT32, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %31

23:                                               ; preds = %15
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @ldns_rdf_size(i32* %24)
  %26 = icmp ne i32 %25, 4
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %31

28:                                               ; preds = %23
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @ldns_rdf2native_int32(i32* %29)
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %28, %27, %22, %14, %9
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @ldns_rr_get_type(i32*) #1

declare dso_local i32 @ldns_rr_rd_count(i32*) #1

declare dso_local i32* @ldns_rr_rdf(i32*, i32) #1

declare dso_local i64 @ldns_rdf_get_type(i32*) #1

declare dso_local i32 @ldns_rdf_size(i32*) #1

declare dso_local i32 @ldns_rdf2native_int32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
